--- a/src/commands/CMakeLists.txt
+++ b/src/commands/CMakeLists.txt
@@ -6,4 +6,8 @@ add_sources(
   ChopsticksMoveUp.cpp
   ChopsticksMoveDown.cpp
   PassBall.cpp
+  WinchPayout.cpp
+  WinchRetract.cpp
+  QuickReleaseOpen.cpp
+  QuickReleaseClose.cpp
 )
