edited the way the chopstick commands operate and added the stop command

--- a/src/commands/CMakeLists.txt
+++ b/src/commands/CMakeLists.txt
@@ -14,6 +14,8 @@ add_sources(
   RetractCatapult.cpp
   RunTracking.cpp
   WinchOpen.cpp
-  AutonomousCommandGroup.cpp
   DriveForward.cpp
+  FindPosition.cpp
+  AutonomousCommandGroup.cpp
+  ChopsticksStop.cpp
 )
