--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/lib"]
 	path = src/lib
-	url = git@github.com:YouthRoboticsIncorporated/lib-4774
+	url = git@github.com:TheDropBears/lib-4774
